<resources>
    <string name="app_name">松小堡-门店</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="i_see">我知道了</string>
    <string name="ignore">忽略</string>
    <string name="proceed">继续</string>
    <string name="being_not">暂不</string>
    <string name="reset">重置</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="copy">复制</string>
    <string name="save">保存</string>
    <string name="save_ok">保存成功</string>
    <string name="my_new">新建</string>
    <string name="add">添加</string>
    <string name="add_sign">+</string>
    <string name="add_photo">添加照片</string>
    <string name="all">全部</string>
    <string name="see">查看</string>
    <string name="see_all">查看全部</string>
    <string name="select">选择</string>
    <string name="select_all">全选</string>
    <string name="total">合计：</string>
    <string name="item_price">价格：</string>
    <string name="item_number">数量：</string>
    <string name="item_select_no">选择：</string>
    <string name="item_select_ok">已选：</string>
    <string name="selected">已选</string>
    <string name="recommend">推荐</string>
    <string name="active">生效中</string>
    <string name="expired">已过期</string>
    <string name="cancelled">已核销</string>
    <string name="login">登录</string>
    <string name="size">尺寸</string>
    <string name="color">颜色</string>
    <string name="price">价格</string>
    <string name="number">数量</string>
    <string name="others">其它</string>
    <string name="clean">清除</string>
    <string name="done">完成</string>
    <string name="desc">""</string>
    <string name="dot">・</string>
    <string name="space">―</string>
    <string name="sign_semicolon">：</string>
    <string name="time_divided">:</string>
    <string name="multiplication">×</string>
    <string name="explain">说明：</string>
    <string name="other">其他：</string>
    <string name="suit">适用：</string>
    <string name="time">时间：</string>
    <string name="place">地点：</string>
    <string name="number_p">人数：</string>
    <string name="number_0">0</string>
    <string name="price_00">0.00</string>
    <string name="num_total">共%1$d件</string>
    <string name="prompt">操作提示</string>
    <string name="delete">删除</string>
    <string name="delete_pain">忍痛删了</string>
    <string name="delete_think">我再想想</string>
    <string name="leave_confirm">去意已决</string>
    <string name="send_confirm">确认发送</string>
    <string name="scan">扫一扫</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="must_fill">必填</string>
    <string name="not_empty">不能为空</string>
    <string name="data_null">- 暂无内容 -</string>
    <string name="setting">设置</string>
    <string name="error">错误</string>
    <string name="post">发布</string>
    <string name="title">标题</string>
    <string name="undo">复原</string>
    <string name="redo">重做</string>
    <string name="edit">编辑</string>
    <string name="unfold">展开</string>
    <string name="put_away">收起</string>
    <string name="rmb">￥</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="version_no">V%1$s</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="qr_code_scan">二维码扫描</string>
    <string name="toast_no_open">暂未开放&#8230; 敬请期待&#8230;</string>
    <string name="toast_server_busy">服务器繁忙</string>
    <string name="toast_exit_prompt">再按一次退出程序</string>
    <string name="toast_error_data_app">应用数据出错\tT_T\n请重启此应用\tT_T</string>
    <string name="toast_error_data_page">数据出现错误\tT_T\n正在加载数据\tT_T</string>
    <string name="toast_object_null">因手机系统版本过低\tT_T\n此功能无法正常使用\tT_T</string>
    <string name="dialog_version_new">当前版本已是最新版本</string>
    <string name="dialog_version_update">检测到新版本\n确定开始更新</string>
    <string name="dialog_version_update_force">当前版本低于最低版本！\n需升级后才能正常使用！</string>
    <string name="dialog_error_msg">出错啦！请稍后再试！</string>
    <string name="dialog_error_video_url">视频出错！无法播放！</string>
    <string name="network">网络</string>
    <string name="network_closed">未能连接到%1$s</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>
    <string name="loading">请稍候&#8230;</string>
    <string name="loading_pull_refresh">下拉刷新</string>
    <string name="loading_release_refresh">松开刷新</string>
    <string name="loading_loading">加载中&#8230;</string>
    <string name="loading_update_time">上次更新时间 </string>
    <string name="loading_load_more">加载更多</string>
    <string name="loading_strive_loading">奋力加载中&#8230;</string>
    <string name="loading_downloading">奋力下载中&#8230;&#8230;</string>
    <string name="loading_no_more">没有更多了</string>
    <string name="loading_no_data">暂无%1$s</string>
    <string name="loading_process">正在%1$s</string>
    <string name="loading_click_load">重新加载</string>
    <string name="loading_submit_fail">上传失败</string>
    <string name="main_tab_text_1">首页</string>
    <string name="main_tab_text_2">定制</string>
    <string name="main_tab_text_3">我的</string>
    <string name="main_head_title_cn">最新活动</string>
    <string name="main_head_title_en">LATEST ACTIVITY</string>
    <string name="mine_login">点击头像登录</string>
    <string name="mine_user_edit">编辑个人资料</string>
    <string name="mine_my_customize">我的定制</string>
    <string name="mine_my_address">我的地址</string>
    <string name="mine_my_designer">驻店设计</string>
    <string name="mine_setting">设置中心</string>
    <string name="mine_message">消息中心</string>
    <string name="mine_message_history">以下为历史消息</string>
    <string name="mine_sign_num">%1$d人已报名</string>
    <string name="mine_info">我的资料</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_nick">昵称</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_male">男</string>
    <string name="mine_gender_female">女</string>
    <string name="mine_gender_confidential">保密</string>
    <string name="mine_birthday">生日</string>
    <string name="mine_area">地区</string>
    <string name="mine_change_nick">修改昵称</string>
    <string name="mine_input_nick">请输入昵称</string>
    <string name="mine_change_gender">修改性别</string>
    <string name="mine_change_area">选择地区</string>
    <string name="mine_change_intro">修改签名</string>
    <string name="mine_intro">签名</string>
    <string name="mine_intro_hint">填写个性签名更容易获得别人的关注哦</string>
    <string name="designer_shop">驻店设计师</string>
    <string name="designer_subscribe">下单定制</string>
    <string name="designer_subscribe_ok">下单成功</string>
    <string name="designer_subscribe_tips">确认选择%1$s么?</string>
    <string name="comment_mine">我的评价</string>
    <string name="comment_want">我要评价</string>
    <string name="comment_add">追加评价</string>
    <string name="comment_add_hint">追加一下你的使用体验吧~</string>
    <string name="comment_add_day">"购买%1$d天后追加评论"</string>
    <string name="comment_all">全部</string>
    <string name="comment_new">最新</string>
    <string name="comment_img">有图</string>
    <string name="comment_star">整体评价</string>
    <string name="comment_ok">评论已发布</string>
    <string name="comment_content_null">评价内容不能为空</string>
    <string name="comment_content_hint">说说它的优点和美中不足的地方吧~</string>
    <string name="goods_num">x%1$d</string>
    <string name="goods_search_et_hint">输入商品关键字</string>
    <string name="goods_new_line">新品上线</string>
    <string name="goods_new_line_en">NEW PRODUCT LAUNCH</string>
    <string name="goods_hot_single">热门单品</string>
    <string name="goods_hot_single_en">THE LOG SERIES</string>
    <string name="goods_top_item_1">综合</string>
    <string name="goods_top_item_2">销量</string>
    <string name="goods_top_item_3">价格</string>
    <string name="goods_top_item_4">信用</string>
    <string name="goods_top_item_5">筛选</string>
    <string name="goods_price_min">最低价格</string>
    <string name="goods_price_max">最高价格</string>
    <string name="goods_attach_1">免费送货入户并安装</string>
    <string name="goods_attach_2">正品保障，假一赔三</string>
    <string name="goods_attach_3">七天无理由退换货（拆封后不支持）</string>
    <string name="goods_attach_4">三年质保</string>
    <string name="goods_effect">效果展示</string>
    <string name="goods_effect_img">效果图图片</string>
    <string name="goods_effect_link">效果图链接</string>
    <string name="goods_effect_link_hint">请粘贴链接地址</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_name_hint">请输入商品名称</string>
    <string name="goods_number">商品数量</string>
    <string name="goods_number_hint">请输入商品数量</string>
    <string name="goods_price">商品单价</string>
    <string name="goods_price_hint">请输入商品单价</string>
    <string name="goods_remarks">商品备注</string>
    <string name="goods_remarks_hint">请输入商品备注</string>
    <string name="goods_edit">编辑商品</string>
    <string name="goods_code">商品编码</string>
    <string name="goods_code_en">长按图片保存到手机相册</string>
    <string name="goods_spec_choice">规格选择</string>
    <string name="goods_spec_choice_en">SPECIFICATIONS CHOICES</string>
    <string name="goods_good_comment">精彩评价</string>
    <string name="goods_good_comment_en">GOOD EVALUATION</string>
    <string name="goods_good_detail">商品详情</string>
    <string name="goods_good_detail_en">COMMODITY DETAILS</string>
    <string name="goods_attr_sku_0">暂时缺货</string>
    <string name="goods_attr_sku_num">库存：%1$d件</string>
    <string name="goods_attr_num_1">%1$d件</string>
    <string name="goods_attr_num_2">%1$s,\t\t%2$d件</string>
    <string name="goods_attr_selected_1">已选：%1$s</string>
    <string name="goods_attr_selected_2">%1$s %2$s</string>
    <string name="goods_attr_selected_3">%1$s %2$s %3$s</string>
    <string name="goods_cart">购物车</string>
    <string name="goods_cart_add">加入购物车</string>
    <string name="goods_go_customize">我要定制</string>
    <string name="order_all">全部</string>
    <string name="order_wait_pay">待付款</string>
    <string name="order_producing">生产中</string>
    <string name="order_wait_send">待发货</string>
    <string name="order_wait_receive">待收货</string>
    <string name="order_wait_install">待安装</string>
    <string name="order_completed">已完成</string>
    <string name="order_wait_opinion">待评价</string>
    <string name="order_repair_return">退换货</string>
    <string name="order_cancelled">已取消</string>
    <string name="order_pay">立即付款</string>
    <string name="order_price_goods">商品金额</string>
    <string name="order_price_freight">物流运费</string>
    <string name="order_price_discount">活动优惠</string>
    <string name="order_price_total">订单总价</string>
    <string name="order_rmb">￥ %1$s</string>
    <string name="order_rmb_add">+￥ %1$s</string>
    <string name="order_rmb_minus">-￥ %1$s</string>
    <string name="order_order_no">订单编号：\t\t%1$s</string>
    <string name="order_pay_type">支付方式：\t\t%1$s</string>
    <string name="order_pay_no">支付编号：\t\t%1$s</string>
    <string name="order_time_add">创建时间：\t\t%1$s</string>
    <string name="order_time_pay">支付时间：\t\t%1$s</string>
    <string name="order_time_send">发货时间：\t\t%1$s</string>
    <string name="order_time_done">完成时间：\t\t%1$s</string>
    <string name="login_account">账号密码登录</string>
    <string name="login_account_input">请输入账号、手机号</string>
    <string name="login_password">密码（6&#8211;20位）</string>
    <string name="address_default_setting">设置为默认收货地址</string>
    <string name="address_consignee">收货人</string>
    <string name="address_consignee_hint">填写收货人姓名</string>
    <string name="address_phone_number">手机号码</string>
    <string name="address_phone_number_hint">填写收货人手机</string>
    <string name="address_area">所在地区</string>
    <string name="address_area_hint">选择所在地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_detail_hint">填写详细地址</string>
    <string name="address_save_used">保存并使用</string>
</resources>