<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_app_bg_01"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_padding_20"
        android:background="@drawable/shape_style_solid_02_08"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment_goods_tv_all"
            style="@style/common_text_change"
            android:background="@drawable/shape_style_solid_04_08"
            android:text="@string/comment_all"
            android:textColor="@color/app_color_white" />

        <TextView
            android:id="@+id/comment_goods_tv_new"
            style="@style/common_text_change"
            android:text="@string/comment_new" />

        <TextView
            android:id="@+id/comment_goods_tv_img"
            style="@style/common_text_change"
            android:text="@string/comment_img" />
    </LinearLayout>

    <com.songbao.sampo_b.widgets.pullrefresh.PullToRefreshRecyclerView
        android:id="@+id/refresh_view_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_padding_10"/>

</LinearLayout>